[gd_scene load_steps=52 format=3 uid="uid://bdit8lhgq6y0a"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_7wdog"]
[ext_resource type="Texture2D" uid="uid://bni1dab3wbnns" path="res://Assets/Ninja Adventure - Asset Pack/Actor/Characters/player.png" id="1_l7i0m"]
[ext_resource type="PackedScene" uid="uid://ixexbs7h7usp" path="res://gui/inventory_gui.tscn" id="2_dbkes"]
[ext_resource type="Script" path="res://Scripts/panel.gd" id="2_kd8fo"]
[ext_resource type="PackedScene" uid="uid://cgvmyjlifkjhx" path="res://gui/control.tscn" id="3_d8qd1"]
[ext_resource type="Script" path="res://Scripts/camera_2d.gd" id="4_i3160"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vxwne"]
radius = 7.0

[sub_resource type="Animation" id="Animation_w8k7k"]
resource_name = "attack_down"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 8), Vector2i(1, 8), Vector2i(2, 8), Vector2i(3, 8)]
}

[sub_resource type="Animation" id="Animation_7n3wo"]
resource_name = "attack_left"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 7), Vector2i(1, 7), Vector2i(2, 7), Vector2i(3, 7)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_4tyj4"]
resource_name = "attack_right"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 7), Vector2i(1, 7), Vector2i(2, 7), Vector2i(3, 7)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_m5qju"]
resource_name = "attack_up"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 6), Vector2i(1, 6), Vector2i(2, 6), Vector2i(3, 6)]
}

[sub_resource type="Animation" id="Animation_0kbmq"]
resource_name = "dead"
length = 0.8
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 9), Vector2i(1, 9), Vector2i(2, 9), Vector2i(3, 9)]
}

[sub_resource type="Animation" id="Animation_k4fny"]
resource_name = "down"
length = 1.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3), Vector2i(3, 3), Vector2i(4, 3), Vector2i(5, 3)]
}

[sub_resource type="Animation" id="Animation_qtck7"]
resource_name = "idle_down"
length = 1.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2), Vector2i(4, 2), Vector2i(5, 2)]
}

[sub_resource type="Animation" id="Animation_jtxqi"]
resource_name = "idle_left"
length = 1.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_qs3lt"]
resource_name = "idle_right"
length = 1.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_s38wo"]
resource_name = "idle_up"
length = 1.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(5, 0)]
}

[sub_resource type="Animation" id="Animation_y11ue"]
resource_name = "left"
length = 1.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 4), Vector2i(1, 4), Vector2i(2, 4), Vector2i(3, 4), Vector2i(4, 4), Vector2i(5, 4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_udrxk"]
resource_name = "right"
length = 1.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 4), Vector2i(1, 4), Vector2i(2, 4), Vector2i(3, 4), Vector2i(4, 4), Vector2i(5, 4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_6o0ei"]
resource_name = "up"
length = 1.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 5), Vector2i(1, 5), Vector2i(2, 5), Vector2i(3, 5), Vector2i(4, 5), Vector2i(5, 5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_44x2a"]
_data = {
"attack_down": SubResource("Animation_w8k7k"),
"attack_left": SubResource("Animation_7n3wo"),
"attack_right": SubResource("Animation_4tyj4"),
"attack_up": SubResource("Animation_m5qju"),
"dead": SubResource("Animation_0kbmq"),
"down": SubResource("Animation_k4fny"),
"idle_down": SubResource("Animation_qtck7"),
"idle_left": SubResource("Animation_jtxqi"),
"idle_right": SubResource("Animation_qs3lt"),
"idle_up": SubResource("Animation_s38wo"),
"left": SubResource("Animation_y11ue"),
"right": SubResource("Animation_udrxk"),
"up": SubResource("Animation_6o0ei")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jr7ua"]
animation = &"attack_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4jjf5"]
animation = &"attack_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_u68nl"]
animation = &"attack_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6dh8a"]
animation = &"attack_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_0enuu"]
blend_point_0/node = SubResource("AnimationNodeAnimation_jr7ua")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_4jjf5")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_u68nl")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_6dh8a")
blend_point_3/pos = Vector2(-1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_fybq0"]
animation = &"dead"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_pnc7w"]
animation = &"idle_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4ff7e"]
animation = &"idle_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_keq7m"]
animation = &"idle_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_l2t32"]
animation = &"idle_down"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_4s61q"]
blend_point_0/node = SubResource("AnimationNodeAnimation_pnc7w")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_4ff7e")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_keq7m")
blend_point_2/pos = Vector2(-1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_l2t32")
blend_point_3/pos = Vector2(0, -1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_m3tgx"]
animation = &"down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7ira5"]
animation = &"up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_k70ki"]
animation = &"right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_40fxy"]
animation = &"left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_whxdv"]
blend_point_0/node = SubResource("AnimationNodeAnimation_m3tgx")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_7ira5")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_k70ki")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_40fxy")
blend_point_3/pos = Vector2(-1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_kbrka"]
advance_mode = 2
advance_expression = "is_moving && not is_attacking"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_g2hj6"]
advance_mode = 2
advance_expression = "is_idle && not is_attacking"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4sd46"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2agt3"]
advance_mode = 2
advance_expression = "is_attacking"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_kycid"]
advance_mode = 2
advance_expression = "is_attacking"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xbvlr"]
advance_mode = 2
advance_expression = "is_idle and not is_attacking"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_286va"]
advance_mode = 2
advance_expression = "is_moving and not is_attacking"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_3uxjj"]
advance_mode = 2
advance_expression = "is_dead"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_a731y"]
advance_mode = 2
advance_expression = "is_dead"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_ieta5"]
states/Start/position = Vector2(207, 108)
states/attack/node = SubResource("AnimationNodeBlendSpace2D_0enuu")
states/attack/position = Vector2(538, 204)
states/dead/node = SubResource("AnimationNodeAnimation_fybq0")
states/dead/position = Vector2(538, 28)
states/idle/node = SubResource("AnimationNodeBlendSpace2D_4s61q")
states/idle/position = Vector2(446, 100)
states/move/node = SubResource("AnimationNodeBlendSpace2D_whxdv")
states/move/position = Vector2(644, 108)
transitions = ["idle", "move", SubResource("AnimationNodeStateMachineTransition_kbrka"), "move", "idle", SubResource("AnimationNodeStateMachineTransition_g2hj6"), "Start", "idle", SubResource("AnimationNodeStateMachineTransition_4sd46"), "move", "attack", SubResource("AnimationNodeStateMachineTransition_2agt3"), "idle", "attack", SubResource("AnimationNodeStateMachineTransition_kycid"), "attack", "idle", SubResource("AnimationNodeStateMachineTransition_xbvlr"), "attack", "move", SubResource("AnimationNodeStateMachineTransition_286va"), "idle", "dead", SubResource("AnimationNodeStateMachineTransition_3uxjj"), "move", "dead", SubResource("AnimationNodeStateMachineTransition_a731y")]

[sub_resource type="CircleShape2D" id="CircleShape2D_2im6j"]
radius = 15.0

[sub_resource type="Animation" id="Animation_2p8ud"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_8j6pg"]
resource_name = "damaged"
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.0156863)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gwtlg"]
_data = {
"RESET": SubResource("Animation_2p8ud"),
"damaged": SubResource("Animation_8j6pg")
}

[node name="player" type="CharacterBody2D"]
slide_on_ceiling = false
script = ExtResource("1_7wdog")

[node name="panel" type="CanvasLayer" parent="."]
process_mode = 3
layer = 3
script = ExtResource("2_kd8fo")

[node name="Control" parent="panel" instance=ExtResource("3_d8qd1")]

[node name="InventoryGui" parent="panel" instance=ExtResource("2_dbkes")]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -136.5
offset_right = 136.5
offset_bottom = 45.0
grow_horizontal = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_vxwne")
one_way_collision_margin = 0.0

[node name="Sprite2D" type="Sprite2D" parent="."]
clip_children = 2
position = Vector2(-24, -40)
texture = ExtResource("1_l7i0m")
centered = false
hframes = 6
vframes = 10
frame = 11

[node name="ColorRect" type="ColorRect" parent="Sprite2D"]
modulate = Color(1, 1, 1, 0)
offset_left = 5.0
offset_top = 13.0
offset_right = 45.0
offset_bottom = 53.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_44x2a")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_ieta5")
advance_expression_base_node = NodePath("..")
anim_player = NodePath("../AnimationPlayer")
parameters/attack/blend_position = Vector2(-0.00658762, 0.906137)
parameters/idle/blend_position = Vector2(0.628253, 0.193154)
parameters/move/blend_position = Vector2(-0.953887, 0.00361013)

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(2, -7)
shape = SubResource("CircleShape2D_2im6j")

[node name="damaged_timer" type="Timer" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3, 3)
limit_left = 0
limit_top = 0
limit_right = 1152
limit_bottom = 648
position_smoothing_enabled = true
script = ExtResource("4_i3160")

[node name="Effect" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gwtlg")
}

[connection signal="closed" from="panel/InventoryGui" to="panel" method="_on_inventory_gui_closed"]
[connection signal="opened" from="panel/InventoryGui" to="panel" method="_on_inventory_gui_opened"]
[connection signal="body_entered" from="hitbox" to="." method="_on_p_hitbox_body_entered"]
[connection signal="body_exited" from="hitbox" to="." method="_on_p_hitbox_body_exited"]
[connection signal="timeout" from="damaged_timer" to="." method="_on_damage_timer_timeout"]
